cncProd/force-app/main/default/objects/Case/fields/AdditionalJobsDesc__c.field-meta.xml
<CustomField>
    <fullName>AdditionalJobsDesc__c</fullName>
    <label>AdditionalJobsDesc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>