cncProd/force-app/main/default/objects/Case/fields/Address001__c.field-meta.xml
<CustomField>
    <fullName>Address001__c</fullName>
    <label>Address001</label>
    <length>50</length>
    <type>Text</type>
</CustomField>