cncProd/force-app/main/default/objects/Case/fields/Address002__c.field-meta.xml
<CustomField>
    <fullName>Address002__c</fullName>
    <label>Address002</label>
    <length>50</length>
    <type>Text</type>
</CustomField>