cncProd/force-app/main/default/objects/Case/fields/Agent_SLA__c.field-meta.xml
<CustomField>
    <fullName>Agent_SLA__c</fullName>
    <label>Agent SLA (in Mins)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>