cncProd/force-app/main/default/objects/Case/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <label>Appointment Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>