cncProd/force-app/main/default/objects/Case/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <label>Appointment Time</label>
    <length>12</length>
    <type>Text</type>
</CustomField>