cncProd/force-app/main/default/objects/Case/fields/Assigned_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date_Time__c</fullName>
    <label>Case Assigned Date/Time</label>
    <type>DateTime</type>
</CustomField>