cncProd/force-app/main/default/objects/Case/fields/Auto_assigned_case__c.field-meta.xml
<CustomField>
    <fullName>Auto_assigned_case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto assigned case</label>
    <type>Checkbox</type>
</CustomField>