cncProd/force-app/main/default/objects/Case/fields/Body_and_Paint__c.field-meta.xml
<CustomField>
    <fullName>Body_and_Paint__c</fullName>
    <label>Body and Paint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>