cncProd/force-app/main/default/objects/Case/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>