cncProd/force-app/main/default/objects/Case/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>MF Citroen</fullName>
            </value>
            <value>
                <fullName>MF Maxus</fullName>
            </value>
            <value>
                <fullName>MF Kia</fullName>
            </value>
            <value>
                <fullName>MF Mitsubishi</fullName>
            </value>
            <value>
                <fullName>RA</fullName>
            </value>
            <value>
                <fullName>MF BYD</fullName>
            </value>
            <value>
                <fullName>MF</fullName>
                <isActive>false</isActive>
                <label>MF</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>