cncProd/force-app/main/default/objects/Case/fields/CAQ1Ans__c.field-meta.xml
<CustomField>
    <fullName>CAQ1Ans__c</fullName>
    <label>CAQ1Ans</label>
    <length>7</length>
    <type>Text</type>
</CustomField>