cncProd/force-app/main/default/objects/Case/fields/CAQ3Ans__c.field-meta.xml
<CustomField>
    <fullName>CAQ3Ans__c</fullName>
    <label>CAQ3Ans</label>
    <length>7</length>
    <type>Text</type>
</CustomField>