cncProd/force-app/main/default/objects/Case/fields/CAQ6Ans__c.field-meta.xml
<CustomField>
    <fullName>CAQ6Ans__c</fullName>
    <label>CAQ6Ans</label>
    <length>7</length>
    <type>Text</type>
</CustomField>