cncProd/force-app/main/default/objects/Case/fields/Car_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Car_Registration_Date__c</fullName>
    <label>Car Registration Date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>