cncProd/force-app/main/default/objects/Case/fields/Carpark_Type__c.field-meta.xml
<CustomField>
    <fullName>Carpark_Type__c</fullName>
    <label>Carpark Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Multi-storey</fullName>
            </value>
            <value>
                <fullName>Roadside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>