cncProd/force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tow Service</fullName>
            </value>
            <value>
                <fullName>Complain</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>Change of Particulars</fullName>
            </value>
            <value>
                <fullName>Change of Vehicle Registration Number</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>MB Sales CLI</fullName>
            </value>
            <value>
                <fullName>MB SFU</fullName>
            </value>
            <value>
                <fullName>MB Sales CSI</fullName>
            </value>
            <value>
                <fullName>Booking List</fullName>
            </value>
            <value>
                <fullName>Created List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>