cncProd/force-app/main/default/objects/Case/fields/Case_Reason_for_Compliment__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_for_Compliment__c</fullName>
    <label>Case Reason for Compliment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Aftersales</fullName>
            </value>
            <value>
                <fullName>Digital Related</fullName>
            </value>
            <value>
                <fullName>Breakdown calls</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>