cncProd/force-app/main/default/objects/Case/fields/Case_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Thread_Id__c</fullName>
    <formula>&quot;ref:_00D&quot;&amp;MID(Id,4,1)&amp;RIGHT($Organization.Id, 4) &amp;&quot;.&quot;&amp; LEFT(Id,4)&amp;RIGHT(Id,5)&amp;&quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Thread Id</label>
    <type>Text</type>
</CustomField>