cncProd/force-app/main/default/objects/Case/fields/Case_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_2__c</fullName>
    <description>Picklist values for Enquiry and Request case type in flow</description>
    <label>Case Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Aftersales</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Parts and Accessories</fullName>
            </value>
            <value>
                <fullName>Boutique/eShop</fullName>
            </value>
            <value>
                <fullName>Vehicle Status</fullName>
            </value>
            <value>
                <fullName>Follow up from other departments</fullName>
            </value>
            <value>
                <fullName>New ownership enquiry</fullName>
            </value>
            <value>
                <fullName>CCLeasing</fullName>
            </value>
            <value>
                <fullName>PDPA</fullName>
            </value>
            <value>
                <fullName>Breakdown and Roadside Assistance</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>