cncProd/force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Product</fullName>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Aftersales Product</fullName>
                <label>Aftersales</label>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Parts &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Boutique</fullName>
                <label>Boutique/eShop</label>
            </value>
            <value>
                <fullName>Finance and Insurance</fullName>
            </value>
            <value>
                <fullName>Vehicle status</fullName>
            </value>
            <value>
                <fullName>Follow up from other departments</fullName>
            </value>
            <value>
                <fullName>New ownership enquiry</fullName>
            </value>
            <value>
                <fullName>CCLeasing</fullName>
            </value>
            <value>
                <fullName>PDPA</fullName>
            </value>
            <value>
                <fullName>Breakdown and Roadside Assistance</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>P01 - Price - Car Sales</fullName>
                <label>Price - Car Sales - P01</label>
            </value>
            <value>
                <fullName>P02 - Price - Exp Insurance Premium</fullName>
                <label>Price - Exp Insurance Premium - P02</label>
            </value>
            <value>
                <fullName>P03 - Price - Parts/Accessories</fullName>
                <label>Price - Parts/Accessories - P03</label>
            </value>
            <value>
                <fullName>P04 - Price - Exp Promo Packages</fullName>
                <label>Price - Exp Promo Packages - P04</label>
            </value>
            <value>
                <fullName>P05 - Price - Exp Service</fullName>
                <label>Price - Exp Service - P05</label>
            </value>
            <value>
                <fullName>P06 - Price - User Car Low Trade-In</fullName>
                <label>Price - User Car Low Trade-In - P06</label>
            </value>
            <value>
                <fullName>P00 - Price - Others</fullName>
                <label>Price - Others - P00</label>
            </value>
            <value>
                <fullName>U01 - Pdt - Air-con Problem</fullName>
                <label>Pdt - Air-con Problem - U01</label>
            </value>
            <value>
                <fullName>U02 - Pdt - Alarm/Remote Problem</fullName>
                <label>Pdt - Alarm/Remote Problem - U02</label>
            </value>
            <value>
                <fullName>U03 - Pdt - Alignment Problem</fullName>
                <label>Pdt - Alignment Problem - U03</label>
            </value>
            <value>
                <fullName>U04 - Pdt - Brakes Problem</fullName>
                <label>Pdt - Brakes Problem - U04</label>
            </value>
            <value>
                <fullName>U05 - Pdt - Clutch Problem</fullName>
                <label>Pdt - Clutch Problem - U05</label>
            </value>
            <value>
                <fullName>U06 - Pdt - Dashboard/Meters Problem</fullName>
                <label>Pdt - Dashboard/Meters Problem - U06</label>
            </value>
            <value>
                <fullName>U07 - Pdt - Engine Problem</fullName>
                <label>Pdt - Engine Problem - U07</label>
            </value>
            <value>
                <fullName>U08 - Pdt - Glasses Problem</fullName>
                <label>Pdt - Glasses Problem - U08</label>
            </value>
            <value>
                <fullName>U09 - Pdt - Leather Seats Problem</fullName>
                <label>Pdt - Leather Seats Problem - U09</label>
            </value>
            <value>
                <fullName>U10 - Pdt - Lightings Problem</fullName>
                <label>Pdt - Lightings Problem - U10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>