cncProd/force-app/main/default/objects/Case/fields/Cash_Card_Issue__c.field-meta.xml
<CustomField>
    <fullName>Cash_Card_Issue__c</fullName>
    <label>Cash Card Issue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>