cncProd/force-app/main/default/objects/Case/fields/Chasis_Number__c.field-meta.xml
<CustomField>
    <fullName>Chasis_Number__c</fullName>
    <label>Chasis Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>