cncProd/force-app/main/default/objects/Case/fields/Child_SG__c.field-meta.xml
<CustomField>
    <fullName>Child_SG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child SG</label>
    <type>Checkbox</type>
</CustomField>