cncProd/force-app/main/default/objects/Case/fields/CLBL_Service_Code_Desc__c.field-meta.xml
<CustomField>
    <fullName>CLBL_Service_Code_Desc__c</fullName>
    <label>CLBL Service Code Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>