cncProd/force-app/main/default/objects/Case/fields/CLBLOwnerID__c.field-meta.xml
<CustomField>
    <fullName>CLBLOwnerID__c</fullName>
    <label>CLBLOwnerID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>