cncProd/force-app/main/default/objects/Case/fields/Complain_Compliement__c.field-meta.xml
<CustomField>
    <fullName>Complain_Compliement__c</fullName>
    <description>To determine whether is it Complain or compliment. This is for reporting purpose</description>
    <formula>IF( Complaint__c , &quot;Complaint&quot;,   IF(Compliment__c, &quot;Compliment&quot;, &quot;&quot;)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint/Compliment</label>
    <type>Text</type>
</CustomField>