cncProd/force-app/main/default/objects/Case/fields/Contact_NRIC__c.field-meta.xml
<CustomField>
    <fullName>Contact_NRIC__c</fullName>
    <formula>Contact.NRIC_Passport_No__c</formula>
    <label>Contact NRIC</label>
    <type>Text</type>
</CustomField>