cncProd/force-app/main/default/objects/Case/fields/Customer_Magic__c.field-meta.xml
<CustomField>
    <fullName>Customer_Magic__c</fullName>
    <label>Customer Magic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>