cncProd/force-app/main/default/objects/Case/fields/Deferred_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Created_Date_Time__c</fullName>
    <label>Deferred Created Date/Time</label>
    <type>DateTime</type>
</CustomField>