cncProd/force-app/main/default/objects/Case/fields/Deferred_First_Response_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Deferred_First_Response_Date_Time__c</fullName>
    <label>Deferred First Response Date/Time</label>
    <type>DateTime</type>
</CustomField>