cncProd/force-app/main/default/objects/Case/fields/Did_not_meet_SLA__c.field-meta.xml
<CustomField>
    <fullName>Did_not_meet_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did not meet SLA?</label>
    <type>Checkbox</type>
</CustomField>