cncProd/force-app/main/default/objects/Case/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <label>DOB</label>
    <length>15</length>
    <type>Text</type>
</CustomField>