cncProd/force-app/main/default/objects/Case/fields/Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Date__c</fullName>
    <label>Email Sent Date</label>
    <type>Date</type>
</CustomField>