cncProd/force-app/main/default/objects/Case/fields/First_Response_Channel__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Channel__c</fullName>
    <label>First Response Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>NIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>