cncProd/force-app/main/default/objects/Case/fields/Franchise__c.field-meta.xml
<CustomField>
    <fullName>Franchise__c</fullName>
    <label>Franchise</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIT</fullName>
            </value>
            <value>
                <fullName>CITPC</fullName>
            </value>
            <value>
                <fullName>CITCV</fullName>
            </value>
            <value>
                <fullName>KIA</fullName>
            </value>
            <value>
                <fullName>KIAPC</fullName>
            </value>
            <value>
                <fullName>KIACV</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>MBP</fullName>
            </value>
            <value>
                <fullName>MBC</fullName>
            </value>
            <value>
                <fullName>MIT</fullName>
            </value>
            <value>
                <fullName>MITPC</fullName>
            </value>
            <value>
                <fullName>MITCV</fullName>
            </value>
            <value>
                <fullName>Maxus</fullName>
            </value>
            <value>
                <fullName>BYD</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>RA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>