cncProd/force-app/main/default/objects/Case/fields/FranchiseCode__c.field-meta.xml
<CustomField>
    <fullName>FranchiseCode__c</fullName>
    <label>Autoline Franchise Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>