cncProd/force-app/main/default/objects/Case/fields/House_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>House_Telephone_Number__c</fullName>
    <label>House Telephone Number</label>
    <type>Phone</type>
</CustomField>