cncProd/force-app/main/default/objects/Case/fields/Is_Case_Assigned_to_SA__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Assigned_to_SA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Assigned</label>
    <type>Checkbox</type>
</CustomField>