cncProd/force-app/main/default/objects/Case/fields/Is_CSE_Remarks_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_CSE_Remarks_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CSE Remarks Updated?</label>
    <type>Checkbox</type>
</CustomField>