cncProd/force-app/main/default/objects/Case/fields/Is_Not_Business_Day_FirstResponse__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Business_Day_FirstResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Business Day - FirstResponse?</label>
    <type>Checkbox</type>
</CustomField>