cncProd/force-app/main/default/objects/Case/fields/Key_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Name__c</fullName>
    <label>Key Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>