cncProd/force-app/main/default/objects/Case/fields/Last_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Last_Mileage__c</fullName>
    <label>Last Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>