cncProd/force-app/main/default/objects/Case/fields/List_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>List_Created_Date__c</fullName>
    <label>List Created Date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>