cncProd/force-app/main/default/objects/Case/fields/Manager_SLA_in_Mins__c.field-meta.xml
<CustomField>
    <fullName>Manager_SLA_in_Mins__c</fullName>
    <label>Manager SLA (in Mins)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>