cncProd/force-app/main/default/objects/Case/fields/Milestone_Status__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Status__c</fullName>
    <formula>if( OR(ISNULL(SLA_Reminder_Sent_Date_Time__c), ISBLANK( SLA_Reminder_Sent_Date_Time__c )),
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682x000001VzwD&amp;operationContext=CHATTER&amp;contentId=05T2x000003mDVG&quot;, &quot;GREEN&quot;, 10, 20),
if(AND(OR(!ISNULL(SLA_Reminder_Sent_Date_Time__c),!ISBLANK( SLA_Reminder_Sent_Date_Time__c )),
(Did_not_meet_SLA__c == FALSE)),
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682x000001VzwE&amp;operationContext=CHATTER&amp;contentId=05T2x000003mDVQ&quot;, &quot;Amber&quot;, 10,20),
	if(AND(OR(!ISNULL(SLA_Reminder_Sent_Date_Time__c),!ISBLANK( SLA_Reminder_Sent_Date_Time__c )),
		(Did_not_meet_SLA__c == TRUE)),
		IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?		rendition=ORIGINAL_Png&amp;versionId=0682x000001Vzw8&amp;operationContext=CHATTER&amp;contentId=05T2x000003mDVB&quot;, &quot;RED&quot;, 10, 20),
		&apos;&apos;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Status</label>
    <type>Text</type>
</CustomField>