cncProd/force-app/main/default/objects/Case/fields/Moible_App_Version__c.field-meta.xml
<CustomField>
    <fullName>Moible_App_Version__c</fullName>
    <description>Mobile App version when customer send a feedback from their mobile app.</description>
    <label>Mobile App Version</label>
    <length>120</length>
    <type>Text</type>
</CustomField>