cncProd/force-app/main/default/objects/Case/fields/NoMail__c.field-meta.xml
<CustomField>
    <fullName>NoMail__c</fullName>
    <label>NoMail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>