cncProd/force-app/main/default/objects/Case/fields/Office_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Office_Telephone_Number__c</fullName>
    <label>Office Telephone Number</label>
    <type>Phone</type>
</CustomField>