cncProd/force-app/main/default/objects/Case/fields/Other_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Other_Remarks__c</fullName>
    <label>Other Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>