cncProd/force-app/main/default/objects/Case/fields/Phone001__c.field-meta.xml
<CustomField>
    <fullName>Phone001__c</fullName>
    <label>Phone001</label>
    <type>Phone</type>
</CustomField>