cncProd/force-app/main/default/objects/Case/fields/Phone002__c.field-meta.xml
<CustomField>
    <fullName>Phone002__c</fullName>
    <label>Phone002</label>
    <type>Phone</type>
</CustomField>