cncProd/force-app/main/default/objects/Case/fields/PKD__c.field-meta.xml
<CustomField>
    <fullName>PKD__c</fullName>
    <label>PKD</label>
    <length>15</length>
    <type>Text</type>
</CustomField>