cncProd/force-app/main/default/objects/Case/fields/PKD_Time__c.field-meta.xml
<CustomField>
    <fullName>PKD_Time__c</fullName>
    <label>PKD Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>