cncProd/force-app/main/default/objects/Case/fields/PrincipalCaseComplaint__c.field-meta.xml
<CustomField>
    <fullName>PrincipalCaseComplaint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrincipalCaseComplaint</label>
    <type>Checkbox</type>
</CustomField>