cncProd/force-app/main/default/objects/Case/fields/PrincipalCaseCompliment__c.field-meta.xml
<CustomField>
    <fullName>PrincipalCaseCompliment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrincipalCaseCompliment</label>
    <type>Checkbox</type>
</CustomField>