cncProd/force-app/main/default/objects/Case/fields/PrincipalCaseEnquiry__c.field-meta.xml
<CustomField>
    <fullName>PrincipalCaseEnquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrincipalCaseEnquiry</label>
    <type>Checkbox</type>
</CustomField>