cncProd/force-app/main/default/objects/Case/fields/Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Type__c</fullName>
    <label>Promotion Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eShop Value Bundle Promotion</fullName>
            </value>
            <value>
                <fullName>MB Protector Plus</fullName>
            </value>
            <value>
                <fullName>MB B&amp;P 120 Promotion</fullName>
                <label>MB Promotions</label>
            </value>
            <value>
                <fullName>CCS FB Contests</fullName>
            </value>
            <value>
                <fullName>Maxus Lead Gen Ads</fullName>
                <label>Maxus Ads</label>
            </value>
            <value>
                <fullName>C&amp;C 120th Anniversary Promotion</fullName>
            </value>
            <value>
                <fullName>KIA 9.9 Promotion</fullName>
            </value>
            <value>
                <fullName>Media Survey</fullName>
            </value>
            <value>
                <fullName>11.11 Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>