cncProd/force-app/main/default/objects/Case/fields/Sales_Person_Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Advisor_Email__c</fullName>
    <label>Sales Person/Advisor Email</label>
    <type>Email</type>
</CustomField>