cncProd/force-app/main/default/objects/Case/fields/Sales_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Sales_Remarks__c</fullName>
    <label>Sales Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>