cncProd/force-app/main/default/objects/Case/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <label>Sales Representative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>