cncProd/force-app/main/default/objects/Case/fields/SCRS_PKD_Return_Location__c.field-meta.xml
<CustomField>
    <fullName>SCRS_PKD_Return_Location__c</fullName>
    <label>SCRS / PKD Return Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>