cncProd/force-app/main/default/objects/Case/fields/SCRS_PKD_Return_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>SCRS_PKD_Return_Postal_Code__c</fullName>
    <label>SCRS / PKD Return Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>